[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/Game.gd" type="Script" id=1]
[ext_resource path="res://scenes/map/Map.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/ExitConfirmation.gd" type="Script" id=3]
[ext_resource path="res://scenes/store/StoreMenu/StoreMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/spawnpoint/SpawnPoint.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/roundmanager/RoundManager.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/roundmanager/Wave/Wave.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/roundmanager/Round/Round.tscn" type="PackedScene" id=8]

[node name="Game" type="Node2D"]
script = ExtResource( 1 )
num_players = 1

[node name="Map" parent="." instance=ExtResource( 2 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
pause_mode = 2

[node name="ExitConfirmation" type="ConfirmationDialog" parent="CanvasLayer"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -35.0
margin_right = 100.0
margin_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 873.746, -243.252 )
window_title = ""
dialog_text = "Really quit?"
script = ExtResource( 3 )

[node name="Label" type="Label" parent="CanvasLayer"]
margin_left = 24.1468
margin_top = 20.2937
margin_right = 82.1468
margin_bottom = 44.2937
text = "FPS"

[node name="StoreMenu" parent="." instance=ExtResource( 4 )]

[node name="Spawners" type="Node2D" parent="."]

[node name="SpawnPoint" parent="Spawners" instance=ExtResource( 5 )]
position = Vector2( 334.982, 111.862 )

[node name="SpawnPoint2" parent="Spawners" instance=ExtResource( 5 )]
position = Vector2( 116.427, 4.62013 )

[node name="RoundManager" parent="." instance=ExtResource( 6 )]

[node name="Round1" parent="RoundManager" instance=ExtResource( 8 )]

[node name="Wave1" parent="RoundManager/Round1" instance=ExtResource( 7 )]
timeout = 120
spawn_delay = 1
zombies = 5

[node name="Wave2" parent="RoundManager/Round1" instance=ExtResource( 7 )]
timeout = 120
spawn_delay = 1
imps = 5

[node name="Round" parent="RoundManager" instance=ExtResource( 8 )]

[node name="Wave" parent="RoundManager/Round" instance=ExtResource( 7 )]
timeout = 60
spawn_delay = 1
zombies = 10
imps = 10
[connection signal="esc_pressed" from="." to="CanvasLayer/ExitConfirmation" method="_on_Game_esc_pressed"]
[connection signal="confirmed" from="CanvasLayer/ExitConfirmation" to="." method="_on_ExitConfirmation_confirmed"]
[connection signal="popup_hide" from="CanvasLayer/ExitConfirmation" to="." method="_on_ExitConfirmation_popup_hide"]
